# claude-fleet-starter

./: README.md  install.ps1  install.sh  test-bootstrap.ps1  test-bootstrap.sh  uninstall.ps1  uninstall.sh
bootstrap/: analyze-history.md
docs/: remote-control-security.md  test-feedback-prompt-fr.md  windows-install-fr.md
lib/: detect-os.ps1  detect-os.sh  doctor.ps1  doctor.sh  prompts.ps1  prompts.sh
lib/i18n/: en.ps1  en.sh  fr.ps1  fr.sh
memory-starter/: MEMORY.md  feedback_check_network_binds.md  feedback_doc_as_you_go.md  feedback_no_auto_authorize.md  feedback_no_secrets.md
skills/cerveau/: SKILL.md  install.ps1  install.sh
skills/cerveau/scripts/: cerveau-list  cerveau-pull  cerveau-recent  cerveau-search  cerveau-write
skills/claude-launcher/: SKILL.md  install.ps1
skills/claude-launcher/scripts/: claude-fork  claude-fresh.ps1  install.sh  launch.sh
skills/claude-launcher/systemd/: claude-launcher.service
skills/claude-on-remote/: install.ps1
skills/claude-on-remote/scripts/: claude_on_remote.py
skills/claude-state-agent/: SKILL.md  install.ps1  install.sh  pyproject.toml
skills/claude-state-agent/src/: actions.py  agent.py  auth.py  local_state.py  main.py  models.py  parser.py  pressure.py  resume_nav.py  sessions.py
skills/claude-state-agent/systemd/: claude-state-agent.service
skills/onboard-tailnet-machine/: SKILL.md  install.ps1
skills/skills-autoupdate/: SKILL.md  install.ps1  install.sh
skills/tailnet-messaging/: SKILL.md  install.ps1
skills/tailscale-secure-form/: SKILL.md  install.ps1
(+31 files in other folders)
