[project]
name = "claude-state-agent"
version = "1.0.0"
description = "Local HTTP agent exposing a machine's claude code state to the streamdeck-bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[tool.uv]
package = false
